--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,4 +2,10 @@
     width: 100wv;
     height: 5vh;
     background-color: black;
+    display: flex;
+    justify-content: end;
+}
+.footer span{
+    color: white;
+    margin-right: 20px;
 }
