--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,6 +4,7 @@
     background-color: black;
     display: flex;
     justify-content: end;
+    // justify-content: end;
 }
 .footer span{
     color: white;
