--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -24,14 +24,14 @@
 .log{
     display: flex;
 }
-.logButton button{
+.logButton :nth-child(1){
     width: 120px;
     background-color: black;
     color: white;
     border: none;
     outline: none;
 }
-.logButton button:hover{
+.logButton :nth-child(1):hover{
     cursor: pointer;
 }
 .logButton span{
