--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,7 +8,7 @@
         </div>
     </form>
 </div>
-<div class="addCourseBtn">
+<div class="add-course-btn">
     <div>
         <button type="button" class="btn  btn-primary"><fa-icon [icon]="faPlus"></fa-icon>  Add course</button>
     </div>
