--- a/src/app/section/section.component.scss
+++ b/src/app/section/section.component.scss
@@ -3,21 +3,7 @@
     height: 90vh;
     background-color: rgb(224, 216, 216);
 }
-.search {
-    width: 75%;
-    height: 10%;
-    margin: 0 auto;
-    padding-top: 20px;
-}
-.addCourseBtn {
-    width: 75%;
-    height: 7%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
-.loadMore{
+.load-more{
     width: 75%;
     height: 7%;
     margin: auto;
